# Pointcept

./: list.sh  pyproject.toml
configs/scannet/: insseg-pointgroup-v1m2-0-ptv3-base.py  pretrain-msc-sculpting.py  pretrain-msc-v1m1-0-spunet-base.py  semseg-spunet-v1m1-0-base.py  semseg-spunet-v1m1-2-efficient-lr10.py  semseg-spunet-v1m1-4-ft.py
pointcept/models/masked_scene_contrast/: __init__.py  masked_scene_contrast_v1m3_sculpting.py
scripts/: train.sh
